--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -1,17 +1,68 @@
 {{#block "header"}}
 
+    <!doctype html>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport"
+              content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>{{#block "title"}}Nyakua Tiko inc{{/block}}</title>
+        <link rel="stylesheet" href="/css/app.css">
+
+        <!-- CSS only -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+        <!-- JavaScript Bundle with Popper -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+
+    </head>
+    <body>
+    <div class="cover-container d-flex w-100 h-100 mx-auto flex-column">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-auto" aria-label="Ninth navbar example">
+            <div class="container-xl">
+                <a class="navbar-brand" href="/">Ntiko<img src=""></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample07XL" aria-controls="navbarsExample07XL" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarsExample07XL">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-inline-flex mt-2 mt-md-0 ms-md-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="/">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link me-3" href="/events">Events</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/about">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/contacts">Contacts</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </div>
 {{/block}}
-
-
-{{#partial "nav-bar"}}
-
-{{/partial }}
+<div class="page">
+{{#partial "nav-bar"}} {{/partial }}
 
 
 {{#block "content"}}
 
 {{/block}}
 
-
+<section>
 {{#block "footer"}}
+        <p class="text-center"><a href="#">Scroll to top</a></p>
+        <footer class="pt-5 my-5 text-muted border-top text-dark-50 text-center">
+            <p>Designed by <a href="#" target="_blank" class="text-dark">Nyakua Tiko inc.</a></p>
+        </footer>
+    </section>
+    </div>
+    </body>
+    </html>
 {{/block}}
