--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -9,46 +9,49 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>{{#block "title"}}Nyakua Tiko inc{{/block}}</title>
         <link rel="stylesheet" href="/css/app.css">
+        <link rel="stylesheet" href="/css/carosel.css">
 
         <!-- CSS only -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
         <!-- JavaScript Bundle with Popper -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
-
     </head>
     <body>
-    <div class="cover-container d-flex w-100 h-100 mx-auto flex-column">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-auto" aria-label="Ninth navbar example">
-            <div class="container-xl">
-                <a class="navbar-brand" href="/">Ntiko<img src=""></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample07XL" aria-controls="navbarsExample07XL" aria-expanded="false" aria-label="Toggle navigation">
+    <header>
+        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand mx-5 my-2" href="#"><img src="/images/tikologo.png" width="150" height="60" alt="logo"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-
-                <div class="collapse navbar-collapse" id="navbarsExample07XL">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-inline-flex mt-2 mt-md-0 ms-md-auto">
+                <div class="collapse navbar-collapse" id="navbarCollapse">
+                    <ul class="navbar-nav me-auto mb-2 mb-md-0">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="/">Home</a>
+                            <a class="nav-link active mx-3" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link me-3" href="/events">Events</a>
+                            <a class="nav-link mx-3" href="#">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/about">About</a>
+                            <a class="nav-link mx-3" href="#">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/contacts">Contacts</a>
+                            <a class="nav-link mx-3" href="#">Contacts</a>
                         </li>
                     </ul>
+                    <form class="d-flex" role="search">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-success" type="submit">Search</button>
+                    </form>
                 </div>
             </div>
         </nav>
-    </div>
+    </header>
+
 {{/block}}
 <div class="page">
-{{#partial "nav-bar"}} {{/partial }}
+{{#partial "nav-bar"}}{{/partial }}
 
 
 {{#block "content"}}
@@ -66,3 +69,5 @@
     </body>
     </html>
 {{/block}}
+
+
