--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -19,7 +19,7 @@
     </head>
     <body>
     <header>
-        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
             <div class="container-fluid">
                 <a class="navbar-brand mx-5 my-2" href="#"><img src="/images/tikologo.png" width="150" height="60" alt="logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -31,18 +31,18 @@
                             <a class="nav-link active mx-3" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link mx-3" href="#">About</a>
+                            <a class="nav-link mx-3" href="/events">Event</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link mx-3" href="#">About</a>
+                            <a class="nav-link mx-3" href="/about">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link mx-3" href="#">Contacts</a>
+                            <a class="nav-link mx-3" href="/contacts">Contacts</a>
                         </li>
                     </ul>
                     <form class="d-flex" role="search">
                         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
+                        <button class="btn btn-outline-warning" type="submit">Search</button>
                     </form>
                 </div>
             </div>
@@ -66,6 +66,7 @@
         </footer>
     </section>
     </div>
+    <script src="/docs/5.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     </body>
     </html>
 {{/block}}
