--- a/src/main/resources/templates/events.hbs
+++ b/src/main/resources/templates/events.hbs
@@ -1,8 +1,39 @@
 {{#partial "content"}}
+<section id="event">
+    <div class="p-5 mb-4 bg-light rounded-3">
+        <div class="container-fluid py-5">
+            <h1 class="display-5 fw-bold">Events Line up</h1>
+            <p class="col-md-8 fs-4">Don't have you weekend plans? We've got you! </p>
+            <button href="/#eventcard" class="btn btn-primary btn-lg" type="button">Find an Event</button>
+        </div>
+    </div>
+</section>
 
+<section id="eventcard">
+    <div class="container-fluid mx-5 mt-5">
+    <main>
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 mt-5 g-3">
+            <div class="col">
+                <div class="card col-md-10 shadow-sm">
+                    <svg class="bd-placeholder-img" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
 
+                    <div class="card-body">
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <div class="btn-group">
+                                <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                                <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                            </div>
+                            <small class="text-muted">9 mins</small>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-
+    </main>
+    </div>
+</section>
 {{/partial}}
 
 {{> "layout.hbs"}}
