--- a/src/main/resources/templates/about.hbs
+++ b/src/main/resources/templates/about.hbs
@@ -4,8 +4,8 @@
 
         <div class="row pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
             <div class="col-lg-7 mt-5 p-lg-5 p-5 pt-lg-3">
-                <h1 class="display-4 fw-bold lh-1 ">About 'ntiko'</h1>
-                <p class="lead">Nyakua Tiko Inc. is a women-led Events Kenya. The phrase Nyakua tiko is an Swahili slung phrase get your ticket. It has been abbreviated to n-tiko. As a users, you are able to know the upcoming Entertainment events, subscribe to them, and buy your tickets.<p>
+                <h1 class="display-4 fw-bold lh-1 ">About 'n-tiko'</h1>
+                <p class="lead">Nyakua Tiko Inc. is a women-led Events company Kenya. The phrase Nyakua tiko is an Swahili slung phrase get your ticket. It has been abbreviated to n-tiko. As a users, you are able to know the upcoming Entertainment events, subscribe to them, and buy your tickets.<p>
                 <p class="lead"><strong>N-Tiko</strong> brings the youth together through live experiences near them. Discover events that match your passions, or create your own with N-Tiko Application today.</p>
                 <div class="d-grid gap-2 mt-5 d-md-flex justify-content-md-start mb-4 mb-lg-3">
                     <button type="button" class="btn btn-primary btn-lg px-4 me-md-2 fw-bold">Add an Event</button>
