--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -21,14 +21,14 @@
     <header>
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
             <div class="container-fluid">
-                <a class="navbar-brand mx-5 my-2" href="#"><img src="/images/tikologo.png" width="150" height="60" alt="logo"></a>
+                <a class="navbar-brand mx-5 my-2" href="/"><img src="/images/tikologo.png" width="150" height="60" alt="logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <ul class="navbar-nav me-auto mb-2 mb-md-0">
                         <li class="nav-item">
-                            <a class="nav-link active mx-3" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active mx-3" aria-current="page" href="/">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link mx-3" href="/events">Event</a>
