--- a/src/main/resources/templates/contacts.hbs
+++ b/src/main/resources/templates/contacts.hbs
@@ -7,7 +7,7 @@
         <div class="container col-xl-10 col-xxl-8 px-4 py-5">
             <div class="row align-items-center g-lg-5 py-5">
                 <div class="col-lg-7 p-5 text-center text-lg-start">
-                    <h1 class="display-4 fw-bold lh-1 mb-3">Fill free to contact us </h1>
+                    <h1 class="display-4 fw-bold lh-1 mb-3">Feel free to contact us </h1>
                     <p class="col-lg-10 fs-4">If you have any inquires and/or feedback, please use the contact time and we'll get back to you within 24 hrs</p>
                 </div>
                 <div class="col-md-10 mx-auto col-lg-5">
