--- a/src/main/resources/templates/events.hbs
+++ b/src/main/resources/templates/events.hbs
@@ -7,33 +7,38 @@
             <button href="/#eventcard" class="btn btn-primary btn-lg" type="button">Find an Event</button>
         </div>
     </div>
+
+
 </section>
 
-<section id="eventcard">
-    <div class="container-fluid mx-5 mt-5">
-    <main>
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 mt-5 g-3">
-            <div class="col">
-                <div class="card col-md-10 shadow-sm">
-                    <svg class="bd-placeholder-img" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+<section id="event card">
+    <div class="container px-4 py-5" id="custom-cards">
+        <h2 class="pb-2 border-bottom">What's Happening</h2>
 
-                    <div class="card-body">
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                        <div class="d-flex justify-content-between align-items-center">
-                            <div class="btn-group">
-                                <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                                <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                            </div>
-                            <small class="text-muted">9 mins</small>
-                        </div>
+        <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
+            <div class="col">
+                <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-4 shadow-lg" style="background-image: url('/images/img.png');">
+                    <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
+                        <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Short title, long jacket</h2>
+                        <ul class="d-flex list-unstyled mt-auto">
+                            <li class="me-auto">
+                                <img src="/images/tikologosq.png" alt="Bootstrap" width="32" height="32" class="rounded-circle border border-white">
+                            </li>
+                                <li class="d-flex align-items-center">
+                                <a type="button" class="btn btn-sm btn-outline-light" href="/event-layout">View</a>
+                                <button type="button" class="btn btn-sm btn-outline-light">Edit</button>
+                                <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#calendar3"/></svg>
+                                <small>3d</small>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
         </div>
-
-    </main>
     </div>
 </section>
+
+
 {{/partial}}
 
 {{> "layout.hbs"}}
