--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -60,7 +60,7 @@
 
 <section>
 {{#block "footer"}}
-        <p class="text-center"><a href="#">Scroll to top</a></p>
+        <p class="text-center mt-3"><a href="#">Scroll to top</a></p>
         <footer class="pt-5 my-5 text-muted border-top text-dark-50 text-center">
             <p>Designed by <a href="#" target="_blank" class="text-dark">Nyakua Tiko inc.</a></p>
         </footer>
