--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -37,7 +37,7 @@
                             <a class="nav-link mx-3" href="/about">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link mx-3" href="/contacts">Contacts</a>
+                            <a class="nav-link mx-3" href="/contactsUs">Contacts</a>
                         </li>
                     </ul>
                     <form class="d-flex" role="search">
