--- a/src/main/resources/templates/events.hbs
+++ b/src/main/resources/templates/events.hbs
@@ -25,10 +25,10 @@
                                 <img src="/images/tikologosq.png" alt="Bootstrap" width="32" height="32" class="rounded-circle border border-white">
                             </li>
                                 <li class="d-flex align-items-center">
-                                <a type="button" class="btn btn-sm btn-outline-light" href="/event-layout">View</a>
-                                <button type="button" class="btn btn-sm btn-outline-light">Edit</button>
+                                <a type="button" class="btn btn-sm btn-danger" href="/event-layout">View</a>
+                                <a href="/event-layout#BuyTicket" type="button" class="btn btn-sm btn-danger">Buy Ticket</a>
                                 <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#calendar3"/></svg>
-                                <small>3d</small>
+                                    <small><span class="badge bg-secondary">3d</span></small>
                             </li>
                         </ul>
                     </div>
