--- a/src/main/resources/templates/events.hbs
+++ b/src/main/resources/templates/events.hbs
@@ -1,10 +1,10 @@
 {{#partial "content"}}
 <section id="event">
-    <div class="p-5 mb-4 bg-light rounded-3">
+    <div class="p-5 mb-4 bg-danger bg-opacity-25 rounded-3">
         <div class="container-fluid py-5">
             <h1 class="display-5 fw-bold">Events Line up</h1>
             <p class="col-md-8 fs-4">Don't have you weekend plans? We've got you! </p>
-            <button href="/#eventcard" class="btn btn-primary btn-lg" type="button">Find an Event</button>
+            <a href="/#eventcard" class="btn btn-primary btn-lg" type="button">Find an Event</a>
         </div>
     </div>
 
