--- a/src/main/resources/templates/Submission.hbs
+++ b/src/main/resources/templates/Submission.hbs
@@ -4,7 +4,7 @@
         <div class="py-5">
             <h1 class="display-5 fw-bold text-white">Your Submission has been Received</h1>
             <div class="col-lg-6 mx-auto">
-                <p class="fs-5 mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
+                <p class="fs-5 mb-4"></p>
                 <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
                     <a type="button" href="/" class="btn btn-outline-info btn-lg px-4 me-sm-3 fw-bold">Event Pagee</a>
                 </div>
