Forms handlebar functionality updated

--- a/src/main/resources/templates/Submission.hbs
+++ b/src/main/resources/templates/Submission.hbs
@@ -1,12 +1,12 @@
 {{#partial "content"}}
 
-    <div class="bg-dark text-secondary px-4 py-5 text-center">
+    <div class="bg-warning p-2 text-dark bg-opacity-25 Vh-100 text-secondary px-4 py-5 text-center">
         <div class="py-5">
-            <h1 class="display-5 fw-bold text-white">Your Submission has been Received</h1>
+            <h3 class="display-6 fw-bold text-dark">Your Submission has been Received Successfully</h3>
             <div class="col-lg-6 mx-auto">
-                <p class="fs-5 mb-4"></p>
+                <p class="fs-5 mb-4">We will get in touch within 24 to 48 hours</p>
                 <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                    <a type="button" href="/" class="btn btn-outline-info btn-lg px-4 me-sm-3 fw-bold">Event Pagee</a>
+                    <a type="button" href="/" class="btn btn-outline-danger btn-lg px-4 me-sm-3 fw-bold">Event Page</a>
                 </div>
             </div>
         </div>
