--- a/src/main/resources/templates/event-layout.hbs
+++ b/src/main/resources/templates/event-layout.hbs
@@ -78,8 +78,8 @@
                               <div class="row g-2">
                                   <div class="col-md">
                                       <div class="form-floating mb-3">
-                                          <input type="tel" class="form-control" pattern="[0-9]{3}-[0-9]{3}-[0-9]{6}" id="floatingPassword" placeholder="Format: 123-456-789012" required autocomplete="off">
-                                          <label for="floatingText">Mobile Number</label>
+                                          <input name="phoneNumber" type="tel" class="form-control" pattern="[0-9]{3}-[0-9]{3}-[0-9]{6}" id="floatingPassword" placeholder="Format: 123-456-789012" required autocomplete="off">
+                                          <label for="floatingText">Mobile Number (123-456-789012)</label>
                                       </div>
                                   </div>
                                       <div class="col-md">
