--- a/src/main/resources/templates/contactsUs.hbs
+++ b/src/main/resources/templates/contactsUs.hbs
@@ -20,8 +20,8 @@
                                     <label for="floatingInputGrid">Your Name</label>
                                 </div>
                                 <div class="form-floating mb-3">
-                                    <input name="phoneNumber" type="text" class="form-control" id="floatingInputGrid" placeholder="Phone Number" autocomplete="off">
-                                    <label for="floatingInputGrid">Phone</label>
+                                    <input name="phoneNumber" type="tel" class="form-control" pattern="[0-9]{3}-[0-9]{3}-[0-9]{6}" id="floatingPassword" placeholder="Format: 123-456-789012" required autocomplete="off">
+                                    <label for="floatingText">Mobile Number (123-456-789012)</label>
                                 </div>
                                 <div class="form-floating mb-3">
                                     <input type="email" class="form-control" id="floatingInputGrid" placeholder="name@example.com" autocomplete="off">
